--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,6 +43,7 @@ jobs:
 
       - name: Make oe_license.txt file from GH org secret "OE_LICENSE"
         env:
+          OE_LICENSE: ${{ github.workspace }}/oe_license.txt
           OE_LICENSE_TEXT: ${{ secrets.OE_LICENSE }}
         run: |
           echo "${OE_LICENSE_TEXT}" > ${OE_LICENSE}
