--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,20 @@ jobs:
           echo "${OE_LICENSE_TEXT}" > ${OE_LICENSE}
 
       - name: "Run FFConversion.sh"
-        run: bash ./runFFConversion.sh
+        run: |
+          # Unzip saved peptides
+          tar -xvzf AllDipeptides.tar.gz
+          tar -xvzf AllTripeptides.tar.gz
+          
+          # Fill in any missing ones
+          bash GenerateDipeptides.sh
+          bash GenerateTripeptides.sh
+          
+          # Do FF Conversion
+          python ConvertResidueParameters.py
+          python ConvertBackboneParameters.py
+          python CombineOffxmls.py
+
 
       - name: "Remove Stereochemistry"
         run: |
