fail fast while figuring out why we can't find tleap

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,6 +51,7 @@ jobs:
       - name: "Run FFConversion.sh"
         run: |
           # Unzip saved peptides
+          which tleap
           tar -xvzf AllDipeptides.tar.gz
           tar -xvzf AllTripeptides.tar.gz
           
